--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 -->
 <html>
 	<head>
+		
+		
+		
 		<title>coco elizabeth</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -47,6 +50,12 @@
 							<!-- Banner -->
 								<section id="banner">
 									<div class="content">
+										<span class="" "><img id="coco" src="images/coco-photo.png" alt="" /></span>
+										<!-- <div class="mini-posts">
+											<article>
+												<a href="#" id="coco" class="image"><img src="images/coco-photo.png" alt="" /></a>
+											</article>
+										</div> -->
 										<header>
 											<h1>coco elizabeth kuntz.</h1>
 											<p>Software Developer | New York, New York</p>
@@ -212,15 +221,23 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-
+											<a href="#" class="image"><img src="images/curated.png" alt="" /></a>
+											<ul class="actions small">
+												<li><a href="https://curated-app.herokuapp.com/" class="button primary small">LIVE</a></li>
+												<li><a href="https://github.com/cocoelizabeth/curated" class="button small">GIT HUB</a></li>
+											</ul>
 											<h3>Curated</h3>
-											<h5>React, Redux, Rails, JavaScript, AWS, PostgreSQL, HTML, SCSS, git</h5>
+											<h5>React, Redux, Rails, JavaScript, AWS, PostgreSQL, HTML, SCSS, git, Webpack, Babel</h5>
+											
 											<p>A single-page Pinterest clone that allows users to discover, curate and share collections of images and ideas.</p>
+											<!-- <ul class="actions small">
+												<li><a href="https://curated-app.herokuapp.com/" class="button primary small">LIVE</a></li>
+												<li><a href="https://github.com/cocoelizabeth/curated" class="button small">GIT HUB</a></li>
+											</ul> -->
 											<ul>
 												<li>Implemented CSS grid and <b>media screen queries</b> in order to create a <b>responsive</b>, Masonry-style layout with seamless transition between display sizes to improve user experience</li>
 												<li>Optimized the overall performance of a media-heavy application that is incredibly reliant on hosted image content by
-												integrated <b>Amazon Web Services S3 (AWS)</b>into the <b>Rails</b> back end for photo storage, organization and user uploads
+												integrated <b>Amazon Web Services S3 (AWS)</b> into the <b>Rails</b> back end for photo storage, organization and user uploads
 												while maintaining content <b>security</b> with <b>AWS IAM</b></li>
 												<li>Improved speed and performance and eliminated <b>N+1 queries</b> by adhering to <b>Active Record</b> and <b>SQL</b> best practices, such as
 												eager loading associated relations</li>
@@ -231,17 +248,20 @@
 												<li>Designed a <b>search feature</b> that pulls results from multiple tables, allowing users to <b>filter results</b> by category without
 												additional queries to the database.</li>
 											</ul>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/pirate-kittens.png" alt="" /></a>
+											<ul class="actions small">
+												<li><a href="https://cocoelizabeth.github.io/pirate_kittens_typing_game/" class="button primary small">LIVE</a></li>
+												<li><a href="https://github.com/cocoelizabeth/pirate_kittens_typing_game" class="button small">GIT HUB</a></li>
+											</ul>
 											<h3>Pirate Kittens Typing Game</h3>
-											<h5>JavaScript, Canvas, CSS, HTML, git</h5>
+											<h5>JavaScript, Canvas, CSS, HTML, git, Webpack, Babel</h5>
 											<p>An animated JavaScript typing game</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+											<ul>
+												<li>Designed custom, colorful graphics using <b>Photoshop</b> and <b>Illustrator</b> to make the user experience visually appealing and
+												fun</li>
+												<li>Utilized <b>Webpack</b> and <b>Babel</b> to insure a reliable uniform user experience across web browsers</li>
 											</ul>
 										</article>
 								</section>
@@ -250,7 +270,7 @@
 					<header class="major">
 						<h2>Experience</h2>
 					</header>
-					<div class="experience-posts">
+					<!-- <div class="experience-posts"> -->
 
 						<!-- REYLENN -->
 						<article>
@@ -282,7 +302,7 @@
 								<li>Led social media influencer campaign that reached over 1 million followers in 2 weeks</li>
 							</ul>
 						</article>
-					</div>
+					<!-- </div> -->
 				</section>
 			
 
@@ -418,61 +438,26 @@
 									</header> -->
 							<!-- Photo -->
 								<section>
-									<header class="major">
+									<!-- <header class="major">
 										<h2>coco elizabeth.</h2>
-									</header>
-									<div class="mini-posts">
+									</header> -->
+									<!-- <div class="mini-posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<!-- <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p> -->
+											<a href="#" id="coco" class="image"><img src="images/coco-photo.png" alt="" /></a>
 										</article>
-										<!-- <article>
-											<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article> -->
-									</div>
+									</div> -->
 									<!-- <ul class="actions">
 										<li><a href="#" class="button">More</a></li>
 									</ul> -->
 								</section>
 									<ul>
-										<li><a href="index.html">Homepage</a></li>
+										<!-- <li><a href="index.html">Homepage</a></li> -->
 										<li><a href="#header">About</a></li>
 										<li><a href="#skills">Skills</a></li>
 										<li><a href="#projects">Projects</a></li>
 										<li><a href="#experience">Experience</a></li>
 										<li><a href="#education">Education</a></li>
-										<!-- <li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li> -->
-										<!-- <li>
-											<span class="opener">Submenu</span>
-											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Etiam Dolore</a></li>
-										<li><a href="#">Adipiscing</a></li>
-										<li>
-											<span class="opener">Another Submenu</span>
-											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Maximus Erat</a></li>
-										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li> -->
+
 									</ul>
 								</nav>
 
@@ -515,9 +500,9 @@
 								</section> -->
 
 							<!-- Footer -->
-								<footer id="footer">
+								<!-- <footer id="footer">
 									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-								</footer>
+								</footer> -->
 
 						</div>
 					</div>
