--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 										<!-- <p>Graduate of the University of California Berkeley.</p> -->
 									
 										<ul class="actions">
-											<li><a href="#" class="button big">Resume</a></li>
+											<li><a href="images/kuntz_coco_resume.pdf" class="button big">Resume</a></li>
 										</ul>
 									</div>
 									<!-- <span class="image object">
@@ -237,7 +237,7 @@
 											<ul>
 												<li>Implemented CSS grid and <b>media screen queries</b> in order to create a <b>responsive</b>, Masonry-style layout with seamless transition between display sizes to improve user experience</li>
 												<li>Optimized the overall performance of a media-heavy application that is incredibly reliant on hosted image content by
-												integrated <b>Amazon Web Services S3 (AWS)</b> into the <b>Rails</b> back end for photo storage, organization and user uploads
+												integrating <b>Amazon Web Services S3 (AWS)</b> with the <b>Rails</b> back end for photo storage, organization and user uploads
 												while maintaining content <b>security</b> with <b>AWS IAM</b></li>
 												<li>Improved speed and performance and eliminated <b>N+1 queries</b> by adhering to <b>Active Record</b> and <b>SQL</b> best practices, such as
 												eager loading associated relations</li>
@@ -262,6 +262,7 @@
 												<li>Designed custom, colorful graphics using <b>Photoshop</b> and <b>Illustrator</b> to make the user experience visually appealing and
 												fun</li>
 												<li>Utilized <b>Webpack</b> and <b>Babel</b> to insure a reliable uniform user experience across web browsers</li>
+												<li>Implemented loop that continues game play until time runs out or all lives are lost</li>
 											</ul>
 										</article>
 								</section>
