all links (including contact links) open in a new window

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 									<ul class="icons">
 										<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
-										<li><a href="https://github.com/cocoelizabeth" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="https://github.com/cocoelizabeth" class="icon brands fa-github" target="_blank" ><span class="label">GitHub</span></a></li>
 										
 										<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
-										<li><a href="https://www.linkedin.com/in/coco-kuntz-90b8a514/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-										<li><a href="https://angel.co/coco-kuntz?public_profile=1" class="icon brands fa-angellist"><span class="label">Angel List</span></a></li>
-										<li><a href="mailto:cocoelizabeth89@gmail.com" class="icon fas fa-envelope"><span class="label">Email</span></a></li>
+										<li><a href="https://www.linkedin.com/in/coco-kuntz-90b8a514/" class="icon brands fa-linkedin-in" target="_blank" ><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://angel.co/coco-kuntz?public_profile=1" class="icon brands fa-angellist"target="_blank" ><span class="label">Angel List</span></a></li>
+										<li><a href="mailto:cocoelizabeth89@gmail.com" class="icon fas fa-envelope" target="_blank" ><span class="label">Email</span></a></li>
 										<!-- <li><a href="tel:858-437-2967" class="icon fas fa-phone-alt"><span class="label">Phone</span></a></li> -->
 
 
@@ -68,7 +68,7 @@
 										<!-- <p>Graduate of the University of California Berkeley.</p> -->
 									
 										<ul class="actions">
-											<li><a href="images/kuntz_coco_resume.pdf" class="button big">Resume</a></li>
+											<li><a href="images/kuntz_coco_resume.pdf" class="button big" target="_blank" >Resume</a></li>
 										</ul>
 									</div>
 									<!-- <span class="image object">
@@ -223,8 +223,8 @@
 										<article>
 											<a href="#" class="image"><img src="images/curated.png" alt="" /></a>
 											<ul class="actions small">
-												<li><a href="https://curated-app.herokuapp.com/" class="button primary small">LIVE</a></li>
-												<li><a href="https://github.com/cocoelizabeth/curated" class="button small">GIT HUB</a></li>
+												<li><a href="https://curated-app.herokuapp.com/" class="button primary small" target="_blank" >LIVE</a></li>
+												<li><a href="https://github.com/cocoelizabeth/curated" class="button small" target="_blank" >GIT HUB</a></li>
 											</ul>
 											<h3>Curated</h3>
 											<h5>React, Redux, Rails, JavaScript, AWS, PostgreSQL, HTML, SCSS, git, Webpack, Babel</h5>
@@ -252,8 +252,8 @@
 										<article>
 											<a href="#" class="image"><img src="images/pirate-kittens.png" alt="" /></a>
 											<ul class="actions small">
-												<li><a href="https://cocoelizabeth.github.io/pirate_kittens_typing_game/" class="button primary small">LIVE</a></li>
-												<li><a href="https://github.com/cocoelizabeth/pirate_kittens_typing_game" class="button small">GIT HUB</a></li>
+												<li><a href="https://cocoelizabeth.github.io/pirate_kittens_typing_game/" class="button primary small" target="_blank" >LIVE</a></li>
+												<li><a href="https://github.com/cocoelizabeth/pirate_kittens_typing_game" class="button small" target="_blank" >GIT HUB</a></li>
 											</ul>
 											<h3>Pirate Kittens Typing Game</h3>
 											<h5>JavaScript, Canvas, CSS, HTML, git, Webpack, Babel</h5>
