--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <html>
 	<head>
 		
-		
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+		<link rel="icon" href="favicon.ico" type="image/x-icon">
 		
 		<title>coco elizabeth</title>
 		<meta charset="utf-8" />
