--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
 -->
 <html>
 	<head>
+
+		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+		<link rel="manifest" href="site.webmanifest">
+		<link rel="mask-icon" href="safari-pinned-tab.svg" color="#93a39b">
+		<meta name="msapplication-TileColor" content="#93a39b">
+		<meta name="theme-color" content="#ffffff">
 		
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-		<link rel="icon" href="favicon.ico" type="image/x-icon">
+		<!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+		<link rel="icon" href="favicon.ico" type="image/x-icon"> -->
 		
 		<title>coco elizabeth</title>
 		<meta charset="utf-8" />
