--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
 <html>
 	<head>
 
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-146786029-1"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() { dataLayer.push(arguments); }
+			gtag('js', new Date());
+
+			gtag('config', 'UA-146786029-1');
+		</script>
+
+
 		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -61,9 +72,10 @@
 										stylist, and graphic designer for one of Australia's largest online, fast-fashion boutiques. I now live in New York
 										City.</p>
 										<p>Graphic Design || Digital Marketing || Social Media || Creative Direction || Fashion</p>
+										<p>email: <a href="mailto:cocoelizabeth89@gmail.com" target:"_blank">cocoelizabeth89@gmail.com</a></p>
 									
 										<ul class="actions">
-											<li><a href="images/kuntz_coco_resume.pdf" class="button big" target="_blank" >Resume</a></li>
+											<li><a href="images/kuntz_coco_resume.pdf" class="button big" target="_blank" >View My Resume</a></li>
 										</ul>
 									</div>
 								</section>
