add pirate kittens gif to projects

--- a/index.html
+++ b/index.html
@@ -187,7 +187,8 @@
 
 									<!-- PIRATE KITTENS -->
 										<article>
-											<a href="#" class="image"><img src="images/pirate-kittens.png" alt="" /></a>
+											<!-- <a href="#" class="image"><img src="images/pirate-kittens.png" alt="" /></a> -->
+											<a href="#" class="image"><img src="images/pirate-kittens-preview.gif" alt=""/></a>
 											<ul class="actions small">
 												<li><a href="https://cocoelizabeth.github.io/pirate_kittens_typing_game/" class="button primary small" target="_blank" >LIVE</a></li>
 												<li><a href="https://github.com/cocoelizabeth/pirate_kittens_typing_game" class="button small" target="_blank" >GIT HUB</a></li>
