project photos now link to bigger photo

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
 									<!-- CURATED -->
 										<article>
-											<a href="#" class="image"><img src="images/curated.png" alt="" /></a>
+											<a href="images/curated.png" class="image"><img src="images/curated.png" alt="" /></a>
 											<ul class="actions small">
 												<li><a href="https://curated-app.herokuapp.com/" class="button primary small" target="_blank" >LIVE</a></li>
 												<li><a href="https://github.com/cocoelizabeth/curated" class="button small" target="_blank" >GIT HUB</a></li>
@@ -188,7 +188,7 @@
 									<!-- PIRATE KITTENS -->
 										<article>
 											<!-- <a href="#" class="image"><img src="images/pirate-kittens.png" alt="" /></a> -->
-											<a href="#" class="image"><img src="images/pirate-kittens-preview.gif" alt=""/></a>
+											<a href="images/pirate-kittens-preview.gif" class="image"><img src="images/pirate-kittens-preview.gif" alt=""/></a>
 											<ul class="actions small">
 												<li><a href="https://cocoelizabeth.github.io/pirate_kittens_typing_game/" class="button primary small" target="_blank" >LIVE</a></li>
 												<li><a href="https://github.com/cocoelizabeth/pirate_kittens_typing_game" class="button small" target="_blank" >GIT HUB</a></li>
@@ -208,7 +208,7 @@
 							<!-- EXPERIENCE -->
 								<section id="experience">
 									<header class="major">
-										<h2>Experience</h2>
+										<h2>EXPERIENCE</h2>
 									</header>
 
 
